codegen/ui_tests/rhai_fn_junk_arg.stderr
error: expecting identifier
  --> ui_tests/rhai_fn_junk_arg.rs:11:11
   |
11 | #[rhai_fn("wheeeee")]
   |           ^^^^^^^^^
